// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de mostrar el componente correctamente 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      ProductCard
    </h1>
  </div>
</div>
`;

exports[`ProductCard debe incrementar el contador 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      ProductCard
    </h1>
    <span>
      0
    </span>
    <button />
  </div>
</div>
`;
